logs/scheduler/2023-11-30/update_actions_dag.py.log
[2023-11-30T17:54:40.329+0000] {processor.py:157} INFO - Started process (PID=80) to work on /opt/airflow/dags/update_actions_dag.py
[2023-11-30T17:54:40.335+0000] {processor.py:829} INFO - Processing file /opt/airflow/dags/update_actions_dag.py for tasks to queue
[2023-11-30T17:54:40.337+0000] {logging_mixin.py:151} INFO - [2023-11-30T17:54:40.337+0000] {dagbag.py:536} INFO - Filling up the DagBag from /opt/airflow/dags/update_actions_dag.py
[2023-11-30T17:54:40.360+0000] {logging_mixin.py:151} INFO - [2023-11-30T17:54:40.339+0000] {dagbag.py:346} ERROR - Failed to import: /opt/airflow/dags/update_actions_dag.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/dagbag.py", line 342, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 839, in exec_module
  File "<frozen importlib._bootstrap_external>", line 976, in get_code
  File "<frozen importlib._bootstrap_external>", line 906, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/update_actions_dag.py", line 17
    )
    ^
SyntaxError: unexpected EOF while parsing
[2023-11-30T17:54:40.361+0000] {processor.py:841} WARNING - No viable dags retrieved from /opt/airflow/dags/update_actions_dag.py
[2023-11-30T17:54:40.425+0000] {processor.py:179} INFO - Processing /opt/airflow/dags/update_actions_dag.py took 0.121 seconds
[2023-11-30T17:55:10.594+0000] {processor.py:157} INFO - Started process (PID=137) to work on /opt/airflow/dags/update_actions_dag.py
[2023-11-30T17:55:10.597+0000] {processor.py:829} INFO - Processing file /opt/airflow/dags/update_actions_dag.py for tasks to queue
[2023-11-30T17:55:10.599+0000] {logging_mixin.py:151} INFO - [2023-11-30T17:55:10.599+0000] {dagbag.py:536} INFO - Filling up the DagBag from /opt/airflow/dags/update_actions_dag.py
[2023-11-30T17:55:10.600+0000] {logging_mixin.py:151} INFO - [2023-11-30T17:55:10.600+0000] {dagbag.py:346} ERROR - Failed to import: /opt/airflow/dags/update_actions_dag.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/dagbag.py", line 342, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 839, in exec_module
  File "<frozen importlib._bootstrap_external>", line 976, in get_code
  File "<frozen importlib._bootstrap_external>", line 906, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/update_actions_dag.py", line 17
    )
    ^
SyntaxError: unexpected EOF while parsing
[2023-11-30T17:55:10.601+0000] {processor.py:841} WARNING - No viable dags retrieved from /opt/airflow/dags/update_actions_dag.py
[2023-11-30T17:55:10.614+0000] {processor.py:179} INFO - Processing /opt/airflow/dags/update_actions_dag.py took 0.023 seconds
[2023-11-30T17:55:40.656+0000] {processor.py:157} INFO - Started process (PID=195) to work on /opt/airflow/dags/update_actions_dag.py
[2023-11-30T17:55:40.657+0000] {processor.py:829} INFO - Processing file /opt/airflow/dags/update_actions_dag.py for tasks to queue
[2023-11-30T17:55:40.659+0000] {logging_mixin.py:151} INFO - [2023-11-30T17:55:40.659+0000] {dagbag.py:536} INFO - Filling up the DagBag from /opt/airflow/dags/update_actions_dag.py
[2023-11-30T17:55:40.661+0000] {logging_mixin.py:151} INFO - [2023-11-30T17:55:40.660+0000] {dagbag.py:346} ERROR - Failed to import: /opt/airflow/dags/update_actions_dag.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/dagbag.py", line 342, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 839, in exec_module
  File "<frozen importlib._bootstrap_external>", line 976, in get_code
  File "<frozen importlib._bootstrap_external>", line 906, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/update_actions_dag.py", line 17
    )
    ^
SyntaxError: unexpected EOF while parsing
[2023-11-30T17:55:40.661+0000] {processor.py:841} WARNING - No viable dags retrieved from /opt/airflow/dags/update_actions_dag.py
[2023-11-30T17:55:40.675+0000] {processor.py:179} INFO - Processing /opt/airflow/dags/update_actions_dag.py took 0.021 seconds
[2023-11-30T17:56:10.903+0000] {processor.py:157} INFO - Started process (PID=251) to work on /opt/airflow/dags/update_actions_dag.py
[2023-11-30T17:56:10.904+0000] {processor.py:829} INFO - Processing file /opt/airflow/dags/update_actions_dag.py for tasks to queue
[2023-11-30T17:56:10.906+0000] {logging_mixin.py:151} INFO - [2023-11-30T17:56:10.906+0000] {dagbag.py:536} INFO - Filling up the DagBag from /opt/airflow/dags/update_actions_dag.py
[2023-11-30T17:56:10.908+0000] {logging_mixin.py:151} INFO - [2023-11-30T17:56:10.907+0000] {dagbag.py:346} ERROR - Failed to import: /opt/airflow/dags/update_actions_dag.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/dagbag.py", line 342, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 839, in exec_module
  File "<frozen importlib._bootstrap_external>", line 976, in get_code
  File "<frozen importlib._bootstrap_external>", line 906, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/update_actions_dag.py", line 17
    )
    ^
SyntaxError: unexpected EOF while parsing
[2023-11-30T17:56:10.908+0000] {processor.py:841} WARNING - No viable dags retrieved from /opt/airflow/dags/update_actions_dag.py
[2023-11-30T17:56:10.921+0000] {processor.py:179} INFO - Processing /opt/airflow/dags/update_actions_dag.py took 0.022 seconds
[2023-11-30T17:56:35.342+0000] {processor.py:157} INFO - Started process (PID=30) to work on /opt/airflow/dags/update_actions_dag.py
[2023-11-30T17:56:35.344+0000] {processor.py:829} INFO - Processing file /opt/airflow/dags/update_actions_dag.py for tasks to queue
[2023-11-30T17:56:35.346+0000] {logging_mixin.py:151} INFO - [2023-11-30T17:56:35.345+0000] {dagbag.py:536} INFO - Filling up the DagBag from /opt/airflow/dags/update_actions_dag.py
[2023-11-30T17:56:35.361+0000] {logging_mixin.py:151} INFO - [2023-11-30T17:56:35.347+0000] {dagbag.py:346} ERROR - Failed to import: /opt/airflow/dags/update_actions_dag.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/dagbag.py", line 342, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 839, in exec_module
  File "<frozen importlib._bootstrap_external>", line 976, in get_code
  File "<frozen importlib._bootstrap_external>", line 906, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/update_actions_dag.py", line 17
    )
    ^
SyntaxError: unexpected EOF while parsing
[2023-11-30T17:56:35.361+0000] {processor.py:841} WARNING - No viable dags retrieved from /opt/airflow/dags/update_actions_dag.py
[2023-11-30T17:56:35.389+0000] {processor.py:179} INFO - Processing /opt/airflow/dags/update_actions_dag.py took 0.050 seconds
